Fix loading of consequent special unicode whitespace characters

To add multiple consequent whitespaces, do the following:

1) Switch to SVG mode
2) Write &#x2002; (for en-space) or &#x2003; (for em-space)
   at the place where non-compressible characters should appear.
3) Now you may switch back into rich-text mode if needed, the
   mnemonics will be automatically converted into corresponding
   Unicode characters.

NOTE: non-numeric mnemonics, like &ensp; or &emsp; are not supported
      (is seems like SVG standard doesn't support that)

BUG:392710